<resources>
    <string name="app_name">KitchGym</string>
    <string name="gym_name">Gym</string>
    <string name="kitchen_name">Kitchen</string>
    <string name="createWorkout">Create New Workout</string>
    <string name="viewWorkouts">View Saved Workouts</string>
    <string name="gymTitle">Gym</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="back">Back</string>
    <string name="abs">Abs</string>
    <string name="legs">Legs</string>
    <string name="arms">Arms</string>
    <string name="chest">Chest</string>
    <string name="muscleTitle">Choose Your Target Muscle Groups</string>
    <string name="generateWorkout">Generate Workout</string>
    <string name="genWorkoutTitle">Today\'s Workout:</string>
    <string name="selectToChange">To replace an exercise, select it. When satisfied with your workout, press \"Start Workout\" to begin!</string>
    <string name="beginWorkout">Start Workout</string>
    <string name="endWorkout">End Workout</string>
    <string name="replaceExercise">Exercise to Replace:</string>
    <string name="browseEx">Choose an exercise:</string>
    <string name="replace">Replace</string>

    <string name="regenerate">Regenerate</string>
    <string name="savedWorkouts">Saved Workouts</string>
    <string name="home"> Back to Home</string>

    <string name="startStopWatch">Start</string>
    <string name="stopStopWatch">Stop</string>

    <string name="totalCalories">Total Calories for Today:</string>
    <string name="inputFood">Input Food</string>
    <string name="calcMacros">Calculate Macros Goal</string>
    <string name="completeEntry">Complete Entries</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
