<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".muscleGroups">

    <CheckBox
        android:id="@+id/legs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/legs"
        app:layout_constraintTop_toBottomOf="@+id/Back"
        tools:layout_editor_absoluteX="153dp" />

    <CheckBox
        android:id="@+id/biceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/biceps"
        app:layout_constraintBottom_toTopOf="@+id/triceps"
        app:layout_constraintTop_toBottomOf="@+id/muscleGroupsTitle"
        tools:layout_editor_absoluteX="153dp" />

    <CheckBox
        android:id="@+id/triceps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/triceps"
        app:layout_constraintBottom_toTopOf="@+id/shoulders"
        app:layout_constraintTop_toBottomOf="@+id/biceps"
        tools:layout_editor_absoluteX="153dp" />

    <CheckBox
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/legs"
        app:layout_constraintTop_toBottomOf="@+id/shoulders"
        tools:layout_editor_absoluteX="152dp" />

    <CheckBox
        android:id="@+id/shoulders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/shoulders"
        app:layout_constraintBottom_toTopOf="@+id/Back"
        app:layout_constraintTop_toBottomOf="@+id/triceps"
        tools:layout_editor_absoluteX="152dp" />

    <TextView
        android:id="@+id/muscleGroupsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="82dp"
        android:text="@string/muscleTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/biceps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="64dp"
        android:text="@string/generateWorkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legs" />
</androidx.constraintlayout.widget.ConstraintLayout>