<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editWorkout">

    <TextView
        android:id="@+id/replaceEx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replaceExercise"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/browseEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browseEx"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="172dp" />

    <Button
        android:id="@+id/replaceBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="30dp"
        android:text="@string/replace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>